mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: wordpress-mysql
spec:
  selector:
    matchLabels:
      app: sliced-bread
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sliced-bread
        tier: mysql
    spec:
      containers:
        - image: mysql:8.0.27
          name: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-volume
