wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: wordpress-frontend
spec:
  selector:
    matchLabels:
      app: sliced-bread
      tier: wordpress
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sliced-bread
        tier: wordpress
    spec:
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/build-wordpress/wordpress:latest
          name: wordpress
          ports:
            - containerPort: 80
              name: wordpress
          volumeMounts:
            - name: wordpress-persistent-storage
              mountPath: /var/www/html
      volumes:
        - name: wordpress-persistent-storage
          persistentVolumeClaim:
            claimName: wordpress-volume
