wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-frontend
spec:
  ports:
    - port: 8080
  selector:
    app: sliced-bread
    tier: wordpress
