wordpress-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: sliced-bread
  name: wordpress-frontend
spec:
  port:
    targetPort: 8080
  to:
    name: wordpress-frontend
